--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/utnphone
+spring.datasource.username=root
+spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
