--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/utnphone
 spring.datasource.username=root
 spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 
+#[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
