cambios en la base de datos, modificado usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/utnphone
 spring.datasource.username=root
-spring.datasource.password=zas333
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=
+#lo desactive porque hibernate te modifica las tabla
+#spring.jpa.hibernate.ddl-auto=update
 
 #[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 spring.jpa.show-sql = true
