--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/utnphone
+spring.datasource.url=jdbc:mysql://localhost:3306/utnphone1
 spring.datasource.username=root
 spring.datasource.password=zas333
 spring.jpa.hibernate.ddl-auto=update
