--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/utnphone1
+spring.datasource.url=jdbc:mysql://localhost:3306/utnphone2
 spring.datasource.username=root
 spring.datasource.password=zas333
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 #[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 spring.jpa.show-sql = true
